--- a/PS3/PS3.ipynb
+++ b/PS3/PS3.ipynb
@@ -392,14 +392,14 @@
        "Attributes:\n",
        "    Conventions:  IRIDL\n",
        "    source:       https://iridl.ldeo.columbia.edu/SOURCES/.NOAA/.NCDC/.ERSST/...\n",
-       "    history:      extracted and cleaned by Ryan Abernathey for Research Compu...</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.Dataset</div></div><ul class='xr-sections'><li class='xr-section-item'><input id='section-139ba32b-0f87-40b2-b1a3-924a468d85b1' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-139ba32b-0f87-40b2-b1a3-924a468d85b1' class='xr-section-summary'  title='Expand/collapse section'>Dimensions:</label><div class='xr-section-inline-details'><ul class='xr-dim-list'><li><span class='xr-has-index'>lat</span>: 89</li><li><span class='xr-has-index'>lon</span>: 180</li><li><span class='xr-has-index'>time</span>: 684</li></ul></div><div class='xr-section-details'></div></li><li class='xr-section-item'><input id='section-9bb6fd37-a24d-414f-bbc2-1be80751d493' class='xr-section-summary-in' type='checkbox'  checked><label for='section-9bb6fd37-a24d-414f-bbc2-1be80751d493' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>lat</span></div><div class='xr-var-dims'>(lat)</div><div class='xr-var-dtype'>float32</div><div class='xr-var-preview xr-preview'>-88.0 -86.0 -84.0 ... 86.0 88.0</div><input id='attrs-c2750e83-bf28-493b-9d11-e21bf4f869ec' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-c2750e83-bf28-493b-9d11-e21bf4f869ec' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-ecd8c823-0b88-4e56-8c73-0adecdad39ab' class='xr-var-data-in' type='checkbox'><label for='data-ecd8c823-0b88-4e56-8c73-0adecdad39ab' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>standard_name :</span></dt><dd>latitude</dd><dt><span>pointwidth :</span></dt><dd>2.0</dd><dt><span>gridtype :</span></dt><dd>0</dd><dt><span>units :</span></dt><dd>degree_north</dd></dl></div><div class='xr-var-data'><pre>array([-88., -86., -84., -82., -80., -78., -76., -74., -72., -70., -68., -66.,\n",
+       "    history:      extracted and cleaned by Ryan Abernathey for Research Compu...</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.Dataset</div></div><ul class='xr-sections'><li class='xr-section-item'><input id='section-119c44d5-77cb-4bfb-a308-abd436c4060f' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-119c44d5-77cb-4bfb-a308-abd436c4060f' class='xr-section-summary'  title='Expand/collapse section'>Dimensions:</label><div class='xr-section-inline-details'><ul class='xr-dim-list'><li><span class='xr-has-index'>lat</span>: 89</li><li><span class='xr-has-index'>lon</span>: 180</li><li><span class='xr-has-index'>time</span>: 684</li></ul></div><div class='xr-section-details'></div></li><li class='xr-section-item'><input id='section-587807a8-cbac-434f-8cc8-792547b2db91' class='xr-section-summary-in' type='checkbox'  checked><label for='section-587807a8-cbac-434f-8cc8-792547b2db91' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>lat</span></div><div class='xr-var-dims'>(lat)</div><div class='xr-var-dtype'>float32</div><div class='xr-var-preview xr-preview'>-88.0 -86.0 -84.0 ... 86.0 88.0</div><input id='attrs-8c0e2275-756d-4da9-bd53-000148c047e5' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-8c0e2275-756d-4da9-bd53-000148c047e5' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-b23e4b06-e19d-411c-9e8f-7a1391f65fba' class='xr-var-data-in' type='checkbox'><label for='data-b23e4b06-e19d-411c-9e8f-7a1391f65fba' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>standard_name :</span></dt><dd>latitude</dd><dt><span>pointwidth :</span></dt><dd>2.0</dd><dt><span>gridtype :</span></dt><dd>0</dd><dt><span>units :</span></dt><dd>degree_north</dd></dl></div><div class='xr-var-data'><pre>array([-88., -86., -84., -82., -80., -78., -76., -74., -72., -70., -68., -66.,\n",
        "       -64., -62., -60., -58., -56., -54., -52., -50., -48., -46., -44., -42.,\n",
        "       -40., -38., -36., -34., -32., -30., -28., -26., -24., -22., -20., -18.,\n",
        "       -16., -14., -12., -10.,  -8.,  -6.,  -4.,  -2.,   0.,   2.,   4.,   6.,\n",
        "         8.,  10.,  12.,  14.,  16.,  18.,  20.,  22.,  24.,  26.,  28.,  30.,\n",
        "        32.,  34.,  36.,  38.,  40.,  42.,  44.,  46.,  48.,  50.,  52.,  54.,\n",
        "        56.,  58.,  60.,  62.,  64.,  66.,  68.,  70.,  72.,  74.,  76.,  78.,\n",
-       "        80.,  82.,  84.,  86.,  88.], dtype=float32)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>lon</span></div><div class='xr-var-dims'>(lon)</div><div class='xr-var-dtype'>float32</div><div class='xr-var-preview xr-preview'>0.0 2.0 4.0 ... 354.0 356.0 358.0</div><input id='attrs-2b985797-e7e5-4051-b515-acd993918520' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-2b985797-e7e5-4051-b515-acd993918520' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-54122fb6-d896-4a45-9cca-149e99508680' class='xr-var-data-in' type='checkbox'><label for='data-54122fb6-d896-4a45-9cca-149e99508680' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>standard_name :</span></dt><dd>longitude</dd><dt><span>pointwidth :</span></dt><dd>2.0</dd><dt><span>gridtype :</span></dt><dd>1</dd><dt><span>units :</span></dt><dd>degree_east</dd></dl></div><div class='xr-var-data'><pre>array([  0.,   2.,   4.,   6.,   8.,  10.,  12.,  14.,  16.,  18.,  20.,  22.,\n",
+       "        80.,  82.,  84.,  86.,  88.], dtype=float32)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>lon</span></div><div class='xr-var-dims'>(lon)</div><div class='xr-var-dtype'>float32</div><div class='xr-var-preview xr-preview'>0.0 2.0 4.0 ... 354.0 356.0 358.0</div><input id='attrs-57039bc5-6258-4229-890e-5c93db1f178e' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-57039bc5-6258-4229-890e-5c93db1f178e' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-6ad872e3-6e1b-4dc4-a0b8-17ca7633f8e3' class='xr-var-data-in' type='checkbox'><label for='data-6ad872e3-6e1b-4dc4-a0b8-17ca7633f8e3' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>standard_name :</span></dt><dd>longitude</dd><dt><span>pointwidth :</span></dt><dd>2.0</dd><dt><span>gridtype :</span></dt><dd>1</dd><dt><span>units :</span></dt><dd>degree_east</dd></dl></div><div class='xr-var-data'><pre>array([  0.,   2.,   4.,   6.,   8.,  10.,  12.,  14.,  16.,  18.,  20.,  22.,\n",
        "        24.,  26.,  28.,  30.,  32.,  34.,  36.,  38.,  40.,  42.,  44.,  46.,\n",
        "        48.,  50.,  52.,  54.,  56.,  58.,  60.,  62.,  64.,  66.,  68.,  70.,\n",
        "        72.,  74.,  76.,  78.,  80.,  82.,  84.,  86.,  88.,  90.,  92.,  94.,\n",
@@ -414,10 +414,10 @@
        "       288., 290., 292., 294., 296., 298., 300., 302., 304., 306., 308., 310.,\n",
        "       312., 314., 316., 318., 320., 322., 324., 326., 328., 330., 332., 334.,\n",
        "       336., 338., 340., 342., 344., 346., 348., 350., 352., 354., 356., 358.],\n",
-       "      dtype=float32)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>datetime64[ns]</div><div class='xr-var-preview xr-preview'>1960-01-15 ... 2016-12-15</div><input id='attrs-3ef3cab3-ca67-4f0e-89e0-dfda41173611' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-3ef3cab3-ca67-4f0e-89e0-dfda41173611' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-5e8a44d2-712c-40cd-a7fe-fbcb3e482999' class='xr-var-data-in' type='checkbox'><label for='data-5e8a44d2-712c-40cd-a7fe-fbcb3e482999' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;1960-01-15T00:00:00.000000000&#x27;, &#x27;1960-02-15T00:00:00.000000000&#x27;,\n",
+       "      dtype=float32)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>datetime64[ns]</div><div class='xr-var-preview xr-preview'>1960-01-15 ... 2016-12-15</div><input id='attrs-ba2ee7e3-bec9-4cd3-82ab-316a38b822be' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-ba2ee7e3-bec9-4cd3-82ab-316a38b822be' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-623de63f-76f0-495e-87c3-fed679f8ab4d' class='xr-var-data-in' type='checkbox'><label for='data-623de63f-76f0-495e-87c3-fed679f8ab4d' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;1960-01-15T00:00:00.000000000&#x27;, &#x27;1960-02-15T00:00:00.000000000&#x27;,\n",
        "       &#x27;1960-03-15T00:00:00.000000000&#x27;, ..., &#x27;2016-10-15T00:00:00.000000000&#x27;,\n",
        "       &#x27;2016-11-15T00:00:00.000000000&#x27;, &#x27;2016-12-15T00:00:00.000000000&#x27;],\n",
-       "      dtype=&#x27;datetime64[ns]&#x27;)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-42f73e68-087c-492f-b90d-358ff893fb18' class='xr-section-summary-in' type='checkbox'  checked><label for='section-42f73e68-087c-492f-b90d-358ff893fb18' class='xr-section-summary' >Data variables: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>sst</span></div><div class='xr-var-dims'>(time, lat, lon)</div><div class='xr-var-dtype'>float32</div><div class='xr-var-preview xr-preview'>...</div><input id='attrs-41f2ceac-2b1e-4953-8e82-38c9373c4768' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-41f2ceac-2b1e-4953-8e82-38c9373c4768' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-4b71d157-844a-4008-8b0f-16eba90cbd23' class='xr-var-data-in' type='checkbox'><label for='data-4b71d157-844a-4008-8b0f-16eba90cbd23' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>pointwidth :</span></dt><dd>1.0</dd><dt><span>valid_min :</span></dt><dd>-3.0</dd><dt><span>valid_max :</span></dt><dd>45.0</dd><dt><span>units :</span></dt><dd>degree_Celsius</dd><dt><span>long_name :</span></dt><dd>Extended reconstructed sea surface temperature</dd><dt><span>standard_name :</span></dt><dd>sea_surface_temperature</dd><dt><span>iridl:hasSemantics :</span></dt><dd>iridl:SeaSurfaceTemperature</dd></dl></div><div class='xr-var-data'><pre>[10957680 values with dtype=float32]</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-7f4c2006-be7c-4359-a6ea-70996bfbe46f' class='xr-section-summary-in' type='checkbox'  checked><label for='section-7f4c2006-be7c-4359-a6ea-70996bfbe46f' class='xr-section-summary' >Attributes: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>Conventions :</span></dt><dd>IRIDL</dd><dt><span>source :</span></dt><dd>https://iridl.ldeo.columbia.edu/SOURCES/.NOAA/.NCDC/.ERSST/.version3b/.sst/</dd><dt><span>history :</span></dt><dd>extracted and cleaned by Ryan Abernathey for Research Computing in Earth Science</dd></dl></div></li></ul></div></div>"
+       "      dtype=&#x27;datetime64[ns]&#x27;)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-64094567-660e-4eca-ac41-eef3d62da995' class='xr-section-summary-in' type='checkbox'  checked><label for='section-64094567-660e-4eca-ac41-eef3d62da995' class='xr-section-summary' >Data variables: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>sst</span></div><div class='xr-var-dims'>(time, lat, lon)</div><div class='xr-var-dtype'>float32</div><div class='xr-var-preview xr-preview'>...</div><input id='attrs-600f697b-a5ce-4e3e-acfc-88e720f6f262' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-600f697b-a5ce-4e3e-acfc-88e720f6f262' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-1403df81-cc4a-4973-8518-59758c5d387b' class='xr-var-data-in' type='checkbox'><label for='data-1403df81-cc4a-4973-8518-59758c5d387b' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>pointwidth :</span></dt><dd>1.0</dd><dt><span>valid_min :</span></dt><dd>-3.0</dd><dt><span>valid_max :</span></dt><dd>45.0</dd><dt><span>units :</span></dt><dd>degree_Celsius</dd><dt><span>long_name :</span></dt><dd>Extended reconstructed sea surface temperature</dd><dt><span>standard_name :</span></dt><dd>sea_surface_temperature</dd><dt><span>iridl:hasSemantics :</span></dt><dd>iridl:SeaSurfaceTemperature</dd></dl></div><div class='xr-var-data'><pre>[10957680 values with dtype=float32]</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-8d502edb-c569-44ec-bab5-aa5f492363d7' class='xr-section-summary-in' type='checkbox'  checked><label for='section-8d502edb-c569-44ec-bab5-aa5f492363d7' class='xr-section-summary' >Attributes: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>Conventions :</span></dt><dd>IRIDL</dd><dt><span>source :</span></dt><dd>https://iridl.ldeo.columbia.edu/SOURCES/.NOAA/.NCDC/.ERSST/.version3b/.sst/</dd><dt><span>history :</span></dt><dd>extracted and cleaned by Ryan Abernathey for Research Computing in Earth Science</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.Dataset>\n",
@@ -449,14 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +524,7 @@
        "          0.30744934,  0.21740341]]], dtype=float32)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -559,10 +552,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2600a7d0208>]"
+       "[<matplotlib.lines.Line2D at 0x15d730d7388>]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -595,16 +588,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2600a767548>]"
+       "[<matplotlib.lines.Line2D at 0x15d7e3a9948>]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
